--- a/index.html
+++ b/index.html
@@ -129,6 +129,10 @@
         <iframe src="https://www.youtube.com/embed/I8W9BzgUuiE" title="YouTube Video 1"></iframe>
         <p>Video nomi yoki qisqacha izoh</p>
       </div>
+      <div class="portfolio-item">
+        <iframe src="https://www.youtube.com/embed/90Yk8xTGTa4" title="YouTube Video 1"></iframe>
+        <p>Video nomi yoki qisqacha izoh</p>
+      </div>
     </div>
   </section>
 
