Ssenariy yozish va kontsept ishlab chiqish – 300,000 so‘m

--- a/index.html
+++ b/index.html
@@ -165,12 +165,31 @@
   </section>
 
   <section class="section services" id="services">
-    <h2>Xizmatlar</h2>
+    <h2>🎬 Video syomka:</h2>
     <ul>
-      <li>🎬 Video montaj qilish</li>
-      <li>📸 Kontent yaratish (Instagram, Reels, YouTube uchun)</li>
-      <li>🧠 Konsultatsiya va strategiya</li>
-      <li>⚡ Tezkor yetkazish va sifatli mahsulot</li>
+      <li>Mobilograf (telefon bilan) – 1 soat: 150,000 so‘m</li>
+      <li>Professional kamera bilan – 1 soat: 300,000 so‘m</li>
+      <li>To‘liq kunlik syomka (8 soatgacha) – 2,000,000 so‘m</li>
+    </ul>
+    <h2>🎙️ Podcast syomkasi:</h2>
+    <ul>
+      <li>1 ta kamera bilan – 1 soat: 400,000 so‘m</li>
+      <li>2 ta kamera bilan (multicam) – 1 soat: 600,000 so‘m</li>
+      <li>Audio yozib olish (professional mikrofonlar bilan) – 1 soat: 300,000 so‘m</li>
+      <li>To‘liq xizmat (video + audio + montaj) – 1 soat: 900,000 so‘m</li>
+    </ul>
+    <h2>✂️ Montaj xizmati:</h2>
+    <ul>
+      <li>Qisqa video (1 daqiqagacha) – 200,000 so‘m</li>
+      <li>To‘liq montaj (5-10 daqiqa) – 500,000 so‘m</li>
+      <li>Podcast montaji (audio + video, 1 soatgacha) – 600,000 so‘m</li>
+      <li>Reklama, klip yoki maxsus loyiha – Narx kelishiladi</li>
+    </ul>
+    <h2>🚀 Qo‘shimcha xizmatlar:</h2>
+    <ul>
+      <li>Drondan foydalanish – Narx kelishiladi</li>
+      <li>Tezkor montaj (24 soat ichida tayyor) – +50% qo‘shimcha to‘lov</li>
+      <li>Ssenariy yozish va kontsept ishlab chiqish – 300,000 so‘m</li>
     </ul>
   </section>
 
