--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
     <div class="portfolio-grid">
       <div class="portfolio-item">
         <iframe src="https://www.youtube.com/embed/7j6knFAcNNM" title="YouTube Video 1"></iframe>
-        <p>Video nomi yoki qisqacha izoh</p>
+        <p><b>🎥Tadbirdan lavha | TOBB ETU</b> <br> 🔹 Ushbu video 2023-yilda TOBB ETU universitetida bo‘lib o‘tgan Career Day tadbirining muhitini yoritish uchun suratga olingan. </p>
       </div>
       <div class="portfolio-item">
         <iframe src="https://www.youtube.com/embed/wPHxUXAhijI" title="YouTube Video 1"></iframe>
