🔹 Syomka jarayonida bir nechta kamera rakurslari va dron kadrlaridan foydalanildi, bu esa videoga yanada dinamik va vizual jozibali ko‘rinish berdi.

--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
       </div>
       <div class="portfolio-item">
         <iframe src="https://www.youtube.com/embed/wPHxUXAhijI" title="YouTube Video 1"></iframe>
-        <p>Video nomi yoki qisqacha izoh</p>
+        <p><b>🎥 Tibbiyot yo'nalishida | Intervyu</b> <br> 🔹 Ushbu intervyu 2024-yil aprel oyida tibbiyot sohasidagi yetakchi kompaniyalardan biri – Genotexnologiya rahbari bilan o‘tkazildi <br> 🔹 Syomka jarayonida bir nechta kamera rakurslari va dron kadrlaridan foydalanildi, bu esa videoga yanada dinamik va vizual jozibali ko‘rinish berdi.</p>
       </div>
       <div class="portfolio-item">
         <iframe src="https://www.youtube.com/embed/IcdLLzi0nFg" title="YouTube Video 1"></iframe>
