🔹 Yuqori sifatli audio yozib olish va montaj orqali podkast informativ va eshitish uchun qulay formatda tayyorlangan.

--- a/index.html
+++ b/index.html
@@ -119,15 +119,15 @@
       </div>
       <div class="portfolio-item">
         <iframe src="https://www.youtube.com/embed/IcdLLzi0nFg" title="YouTube Video 1"></iframe>
-        <p>Video nomi yoki qisqacha izoh</p>
+        <p><b>🎙 Jinsiy Zaiflik va Erektil Disfunksiya – Tibbiyot Podkasti</b> <br> 🔹 Vizual minimalizm va fokus faqat ma’lumotga qaratilgan – podkast davomida bitta spiker suhbat olib boradi, bu esa tinglovchilar uchun diqqatni jamlashga yordam beradi. <br> 🔹 Professional audio yozib olish va sifatli montaj podkastni tinglashni qulay qiladi.</p>
       </div>
       <div class="portfolio-item">
         <iframe src="https://www.youtube.com/embed/2rYjYmfIxfs" title="YouTube Video 1"></iframe>
-        <p>Video nomi yoki qisqacha izoh</p>
+        <p><b>🎙 Micropenia – Tibbiyot Podkasti</b> <br> 🔹 Syomka sokin va jiddiy atmosfera bilan olib borilgan bo‘lib, vizual minimalizm orqali tinglovchilar uchun qulay format yaratilgan. <br> 🔹 Sifatli audio yozib olish va montaj tufayli podkast informativ va professional chiqdi.</p>
       </div>
       <div class="portfolio-item">
         <iframe src="https://www.youtube.com/embed/I8W9BzgUuiE" title="YouTube Video 1"></iframe>
-        <p>Video nomi yoki qisqacha izoh</p>
+        <p><b>🎙 Tez Bo‘shanib qo'yish – Tibbiyot Podkasti</b> <br> 🔹 Yakka spiker formatida yozilgan podkastda mutaxassis (agar ismi bo‘lsa, qo‘shish mumkin) ushbu muammoga ta’sir qiluvchi omillar, davolash usullari va samarali yechimlar haqida gapiradi. <br> 🔹 Yuqori sifatli audio yozib olish va montaj orqali podkast informativ va eshitish uchun qulay formatda tayyorlangan.</p>
       </div>
       <div class="portfolio-item">
         <iframe src="https://www.youtube.com/embed/90Yk8xTGTa4" title="YouTube Video 1"></iframe>
