--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
       </div>
       <div class="portfolio-item">
         <iframe src="https://www.youtube.com/embed/90Yk8xTGTa4" title="YouTube Video 1"></iframe>
-        <p>Video nomi yoki qisqacha izoh</p>
+        <p><b>🎬 Bolalar Uchun Kulgili Vlog – Aka-uka O‘yinlari!</b> <br> 🔹 Barcha kadrlar bolalar tomonidan olingan, bu esa videoga samimiy va tabiiy ko‘rinish beradi <br> 🔹 Montaj qiziqarli va bolalar uchun yanada jozibali bo‘lishi uchun multfilm effektlari va kulgili memlar qo‘shilgan <br> 🌎 Til: Ingliz tili</p>
       </div>
     </div>
   </section>
