--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
     <h2>Reels videolar</h2>
     <div class="portfolio-grid">
       <div class="portfolio-item">
-        <iframe src="" title="Reels Video 1"></iframe>
+        <iframe src="https://www.youtube.com/embed/G79DJ8iReSE" title="Reels Video 1"></iframe>
         <p>Reels nomi yoki qisqacha izoh</p>
       </div>
     </div>
