--- a/index.html
+++ b/index.html
@@ -51,6 +51,19 @@
       box-shadow: 0 2px 5px rgba(0,0,0,0.1);
       text-align: center;
     }
+    iframe {
+      width: 100%;
+      border: none;
+    }
+    .youtube iframe {
+      height: 200px;
+    }
+    .reels iframe {
+      width: 100%;
+      aspect-ratio: 9 / 16;
+      height: auto;
+      border-radius: 10px;
+    }
     .brands-grid {
       display: flex;
       flex-wrap: wrap;
@@ -65,11 +78,6 @@
       background: #fff;
       box-shadow: 0 2px 5px rgba(0,0,0,0.1);
       object-fit: cover;
-    }
-    iframe {
-      width: 100%;
-      height: 200px;
-      border: none;
     }
     .services ul {
       list-style: none;
@@ -106,37 +114,37 @@
     </nav>
   </header>
 
-  <section class="section" id="youtube">
+  <section class="section youtube" id="youtube">
     <h2>YouTube videolar</h2>
     <div class="portfolio-grid">
       <div class="portfolio-item">
         <iframe src="https://www.youtube.com/embed/7j6knFAcNNM" title="YouTube Video 1"></iframe>
-        <p><b>🎥Tadbirdan lavha | TOBB ETU</b> <br> 🔹 Ushbu video 2023-yilda TOBB ETU universitetida bo‘lib o‘tgan Career Day tadbirining muhitini yoritish uchun suratga olingan. </p>
+        <p><b>🎥Tadbirdan lavha | TOBB ETU</b><br>🔹 Ushbu video 2023-yilda TOBB ETU universitetida bo‘lib o‘tgan Career Day tadbirining muhitini yoritish uchun suratga olingan.</p>
       </div>
       <div class="portfolio-item">
-        <iframe src="https://www.youtube.com/embed/wPHxUXAhijI" title="YouTube Video 1"></iframe>
-        <p><b>🎥 Tibbiyot yo'nalishida | Intervyu</b> <br> 🔹 Ushbu intervyu 2024-yil aprel oyida tibbiyot sohasidagi yetakchi kompaniyalardan biri – Genotexnologiya rahbari bilan o‘tkazildi <br> 🔹 Syomka jarayonida bir nechta kamera rakurslari va dron kadrlaridan foydalanildi, bu esa videoga yanada dinamik va vizual jozibali ko‘rinish berdi.</p>
+        <iframe src="https://www.youtube.com/embed/wPHxUXAhijI" title="YouTube Video 2"></iframe>
+        <p><b>🎥 Tibbiyot yo'nalishida | Intervyu</b><br>🔹 Genotexnologiya rahbari bilan intervyu, bir nechta kamera rakurslari va dron kadrlaridan foydalanilgan.</p>
       </div>
       <div class="portfolio-item">
-        <iframe src="https://www.youtube.com/embed/IcdLLzi0nFg" title="YouTube Video 1"></iframe>
-        <p><b>🎙 Jinsiy Zaiflik va Erektil Disfunksiya – Tibbiyot Podkasti</b> <br> 🔹 Vizual minimalizm va fokus faqat ma’lumotga qaratilgan – podkast davomida bitta spiker suhbat olib boradi, bu esa tinglovchilar uchun diqqatni jamlashga yordam beradi. <br> 🔹 Professional audio yozib olish va sifatli montaj podkastni tinglashni qulay qiladi.</p>
+        <iframe src="https://www.youtube.com/embed/IcdLLzi0nFg" title="YouTube Video 3"></iframe>
+        <p><b>🎙 Jinsiy Zaiflik – Tibbiyot Podkasti</b><br>🔹 Minimalist vizual, professional audio va montaj bilan tayyorlangan podkast.</p>
       </div>
       <div class="portfolio-item">
-        <iframe src="https://www.youtube.com/embed/2rYjYmfIxfs" title="YouTube Video 1"></iframe>
-        <p><b>🎙 Micropenia – Tibbiyot Podkasti</b> <br> 🔹 Syomka sokin va jiddiy atmosfera bilan olib borilgan bo‘lib, vizual minimalizm orqali tinglovchilar uchun qulay format yaratilgan. <br> 🔹 Sifatli audio yozib olish va montaj tufayli podkast informativ va professional chiqdi.</p>
+        <iframe src="https://www.youtube.com/embed/2rYjYmfIxfs" title="YouTube Video 4"></iframe>
+        <p><b>🎙 Micropenia – Tibbiyot Podkasti</b><br>🔹 Jiddiy atmosfera, sifatli audio va professional montaj.</p>
       </div>
       <div class="portfolio-item">
-        <iframe src="https://www.youtube.com/embed/I8W9BzgUuiE" title="YouTube Video 1"></iframe>
-        <p><b>🎙 Tez Bo‘shanib qo'yish – Tibbiyot Podkasti</b> <br> 🔹 Yakka spiker formatida yozilgan podkastda mutaxassis (agar ismi bo‘lsa, qo‘shish mumkin) ushbu muammoga ta’sir qiluvchi omillar, davolash usullari va samarali yechimlar haqida gapiradi. <br> 🔹 Yuqori sifatli audio yozib olish va montaj orqali podkast informativ va eshitish uchun qulay formatda tayyorlangan.</p>
+        <iframe src="https://www.youtube.com/embed/I8W9BzgUuiE" title="YouTube Video 5"></iframe>
+        <p><b>🎙 Tez Bo‘shanib qo'yish – Tibbiyot Podkasti</b><br>🔹 Yakka spiker formati, yechimlar, professional audio va montaj.</p>
       </div>
       <div class="portfolio-item">
-        <iframe src="https://www.youtube.com/embed/90Yk8xTGTa4" title="YouTube Video 1"></iframe>
-        <p><b>🎬 Bolalar Uchun Kulgili Vlog – Aka-uka O‘yinlari!</b> <br> 🔹 Barcha kadrlar bolalar tomonidan olingan, bu esa videoga samimiy va tabiiy ko‘rinish beradi <br> 🔹 Montaj qiziqarli va bolalar uchun yanada jozibali bo‘lishi uchun multfilm effektlari va kulgili memlar qo‘shilgan <br> 🌎 Til: Ingliz tili</p>
+        <iframe src="https://www.youtube.com/embed/90Yk8xTGTa4" title="YouTube Video 6"></iframe>
+        <p><b>🎬 Bolalar Uchun Kulgili Vlog</b><br>🔹 Bolalar tomonidan syomka qilingan, multfilm effektlari bilan boyitilgan.</p>
       </div>
     </div>
   </section>
 
-  <section class="section" id="reels">
+  <section class="section reels" id="reels">
     <h2>Reels videolar</h2>
     <div class="portfolio-grid">
       <div class="portfolio-item">
@@ -149,18 +157,16 @@
   <section class="section" id="brands">
     <h2>Men ishlagan brendlar</h2>
     <div class="brands-grid">
-      <!-- Brend logotiplari yoki shaxsiy profil rasmlari shu yerga qo‘shiladi -->
       <img src="img/brand1.jpg" alt="Brand 1" class="brand-logo" />
       <img src="img/brand2.jpg" alt="Brand 2" class="brand-logo" />
       <img src="img/brand3.jpg" alt="Brand 3" class="brand-logo" />
-      <img src="img/brand4.jpg" alt="Brand 3" class="brand-logo" />
-      <img src="img/brand5.jpg" alt="Brand 3" class="brand-logo" />
-      <img src="img/brand6.jpg" alt="Brand 3" class="brand-logo" />
-      <img src="img/brand7.jpg" alt="Brand 3" class="brand-logo" />
-      <img src="img/brand8.jpg" alt="Brand 3" class="brand-logo" />
-      <img src="img/brand9.jfif" alt="Brand 3" class="brand-logo" />
-      <img src="img/brand10.jpg" alt="Brand 3" class="brand-logo" />
-      <!-- Qo‘shimcha brend logotiplari qo‘shishingiz mumkin -->
+      <img src="img/brand4.jpg" alt="Brand 4" class="brand-logo" />
+      <img src="img/brand5.jpg" alt="Brand 5" class="brand-logo" />
+      <img src="img/brand6.jpg" alt="Brand 6" class="brand-logo" />
+      <img src="img/brand7.jpg" alt="Brand 7" class="brand-logo" />
+      <img src="img/brand8.jpg" alt="Brand 8" class="brand-logo" />
+      <img src="img/brand9.jfif" alt="Brand 9" class="brand-logo" />
+      <img src="img/brand10.jpg" alt="Brand 10" class="brand-logo" />
     </div>
   </section>
 
@@ -175,21 +181,21 @@
     <ul>
       <li>1 ta kamera bilan – 1 soat: 400,000 so‘m</li>
       <li>2 ta kamera bilan (multicam) – 1 soat: 600,000 so‘m</li>
-      <li>Audio yozib olish (professional mikrofonlar bilan) – 1 soat: 300,000 so‘m</li>
-      <li>To‘liq xizmat (video + audio + montaj) – 1 soat: 900,000 so‘m</li>
+      <li>Audio yozib olish – 1 soat: 300,000 so‘m</li>
+      <li>To‘liq xizmat – 1 soat: 900,000 so‘m</li>
     </ul>
     <h2>✂️ Montaj xizmati:</h2>
     <ul>
       <li>Qisqa video (1 daqiqagacha) – 200,000 so‘m</li>
-      <li>To‘liq montaj (5-10 daqiqa) – 500,000 so‘m</li>
-      <li>Podcast montaji (audio + video, 1 soatgacha) – 600,000 so‘m</li>
+      <li>To‘liq montaj (5–10 daqiqa) – 500,000 so‘m</li>
+      <li>Podcast montaji – 600,000 so‘m</li>
       <li>Reklama, klip yoki maxsus loyiha – Narx kelishiladi</li>
     </ul>
     <h2>🚀 Qo‘shimcha xizmatlar:</h2>
     <ul>
       <li>Drondan foydalanish – Narx kelishiladi</li>
-      <li>Tezkor montaj (24 soat ichida tayyor) – +50% qo‘shimcha to‘lov</li>
-      <li>Ssenariy yozish va kontsept ishlab chiqish – 300,000 so‘m</li>
+      <li>Tezkor montaj – +50% qo‘shimcha to‘lov</li>
+      <li>Ssenariy yozish – 300,000 so‘m</li>
     </ul>
   </section>
 
