--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>Just Oripov - Portfolio</title>
   <link rel="shortcut icon" href="./img/profile.jpg" type="image/x-icon">
   <style>
-    body {
+        body {
       margin: 0;
       font-family: Arial, sans-serif;
       background: #f5f5f5;
@@ -60,9 +60,11 @@
     }
     .reels iframe {
       width: 100%;
-      aspect-ratio: 9 / 16;
-      height: auto;
+      max-width: 300px;
+      height: 533px;
       border-radius: 10px;
+      margin: 0 auto;
+      display: block;
     }
     .brands-grid {
       display: flex;
