--- a/index.html
+++ b/index.html
@@ -153,6 +153,22 @@
         <iframe src="https://www.youtube.com/embed/G79DJ8iReSE" title="Reels Video 1"></iframe>
         <p>Reels nomi yoki qisqacha izoh</p>
       </div>
+      <div class="portfolio-item">
+        <iframe src="https://www.youtube.com/embed/TaYM3tP1uWI" title="Reels Video 1"></iframe>
+        <p>Reels nomi yoki qisqacha izoh</p>
+      </div>
+      <div class="portfolio-item">
+        <iframe src="https://www.youtube.com/embed/LvzkLekzdRU" title="Reels Video 1"></iframe>
+        <p>Reels nomi yoki qisqacha izoh</p>
+      </div>
+      <div class="portfolio-item">
+        <iframe src="https://www.youtube.com/embed/1Me-CNML6EU" title="Reels Video 1"></iframe>
+        <p>Reels nomi yoki qisqacha izoh</p>
+      </div>
+      <div class="portfolio-item">
+        <iframe src="https://www.youtube.com/embed/1Me-CNML6EU" title="Reels Video 1"></iframe>
+        <p>Reels nomi yoki qisqacha izoh</p>
+      </div>
     </div>
   </section>
 
