--- a/index.html
+++ b/index.html
@@ -166,7 +166,39 @@
         <p>Reels nomi yoki qisqacha izoh</p>
       </div>
       <div class="portfolio-item">
-        <iframe src="https://www.youtube.com/embed/1Me-CNML6EU" title="Reels Video 1"></iframe>
+        <iframe src="https://www.youtube.com/embed/YU3gTaml8kw" title="Reels Video 1"></iframe>
+        <p>Reels nomi yoki qisqacha izoh</p>
+      </div>
+      <div class="portfolio-item">
+        <iframe src="https://www.youtube.com/embed/CZ1xHO8A8LY" title="Reels Video 1"></iframe>
+        <p>Reels nomi yoki qisqacha izoh</p>
+      </div>
+      <div class="portfolio-item">
+        <iframe src="https://www.youtube.com/embed/_Z_jG1_QyTY" title="Reels Video 1"></iframe>
+        <p>Reels nomi yoki qisqacha izoh</p>
+      </div>
+      <div class="portfolio-item">
+        <iframe src="https://www.youtube.com/embed/oECbuG9kUIE" title="Reels Video 1"></iframe>
+        <p>Reels nomi yoki qisqacha izoh</p>
+      </div>
+      <div class="portfolio-item">
+        <iframe src="https://www.youtube.com/embed/n1Dw6QNHgTs" title="Reels Video 1"></iframe>
+        <p>Reels nomi yoki qisqacha izoh</p>
+      </div>
+      <div class="portfolio-item">
+        <iframe src="https://www.youtube.com/embed/wO3vergtOU4" title="Reels Video 1"></iframe>
+        <p>Reels nomi yoki qisqacha izoh</p>
+      </div>
+      <div class="portfolio-item">
+        <iframe src="https://www.youtube.com/embed/ymRdBVWC9hI" title="Reels Video 1"></iframe>
+        <p>Reels nomi yoki qisqacha izoh</p>
+      </div>
+      <div class="portfolio-item">
+        <iframe src="https://www.youtube.com/embed/oECbuG9kUIE" title="Reels Video 1"></iframe>
+        <p>Reels nomi yoki qisqacha izoh</p>
+      </div>
+      <div class="portfolio-item">
+        <iframe src="https://www.youtube.com/embed/oECbuG9kUIE" title="Reels Video 1"></iframe>
         <p>Reels nomi yoki qisqacha izoh</p>
       </div>
     </div>
