--- a/index.html
+++ b/index.html
@@ -173,34 +173,51 @@
     <div class="pagination" id="pagination" style="text-align: center; margin-top: 30px;"></div>
   </section>
 
-  <!-- Brendlar -->
   <section class="section" id="brands">
     <h2>Men ishlagan brendlar</h2>
     <div class="brands-grid">
       <img src="img/brand1.jpg" alt="Brand 1" class="brand-logo" />
       <img src="img/brand2.jpg" alt="Brand 2" class="brand-logo" />
       <img src="img/brand3.jpg" alt="Brand 3" class="brand-logo" />
+      <img src="img/brand4.jpg" alt="Brand 4" class="brand-logo" />
+      <img src="img/brand5.jpg" alt="Brand 5" class="brand-logo" />
+      <img src="img/brand6.jpg" alt="Brand 6" class="brand-logo" />
+      <img src="img/brand7.jpg" alt="Brand 7" class="brand-logo" />
+      <img src="img/brand8.jpg" alt="Brand 8" class="brand-logo" />
+      <img src="img/brand9.jfif" alt="Brand 9" class="brand-logo" />
+      <img src="img/brand10.jpg" alt="Brand 10" class="brand-logo" />
     </div>
   </section>
 
-  <!-- Xizmatlar -->
   <section class="section services" id="services">
     <h2>🎬 Video syomka:</h2>
     <ul>
-      <li>Mobilograf – 150,000 so‘m</li>
-      <li>Kamera bilan – 300,000 so‘m</li>
+      <li>Mobilograf (telefon bilan) – 1 soat: 150,000 so‘m</li>
+      <li>Professional kamera bilan – 1 soat: 300,000 so‘m</li>
+      <li>To‘liq kunlik syomka (8 soatgacha) – 2,000,000 so‘m</li>
     </ul>
-    <h2>🎙 Podcast:</h2>
+    <h2>🎙️ Podcast syomkasi:</h2>
     <ul>
-      <li>Multicam – 600,000 so‘m</li>
+      <li>1 ta kamera bilan – 1 soat: 400,000 so‘m</li>
+      <li>2 ta kamera bilan (multicam) – 1 soat: 600,000 so‘m</li>
+      <li>Audio yozib olish – 1 soat: 300,000 so‘m</li>
+      <li>To‘liq xizmat – 1 soat: 900,000 so‘m</li>
     </ul>
-    <h2>✂️ Montaj:</h2>
+    <h2>✂️ Montaj xizmati:</h2>
     <ul>
-      <li>Reels – 200,000 so‘m</li>
+      <li>Qisqa video (1 daqiqagacha) – 200,000 so‘m</li>
+      <li>To‘liq montaj (5–10 daqiqa) – 500,000 so‘m</li>
+      <li>Podcast montaji – 600,000 so‘m</li>
+      <li>Reklama, klip yoki maxsus loyiha – Narx kelishiladi</li>
+    </ul>
+    <h2>🚀 Qo‘shimcha xizmatlar:</h2>
+    <ul>
+      <li>Drondan foydalanish – Narx kelishiladi</li>
+      <li>Tezkor montaj – +50% qo‘shimcha to‘lov</li>
+      <li>Ssenariy yozish – 300,000 so‘m</li>
     </ul>
   </section>
 
-  <!-- Bog‘lanish -->
   <section class="section contact" id="contact">
     <h2>Bog'lanish</h2>
     <a href="https://t.me/just_oripov">Telegram</a>
