--- a/index.html
+++ b/index.html
@@ -163,6 +163,10 @@
         <iframe src="https://www.youtube.com/embed/90Yk8xTGTa4" title="YouTube Video 6"></iframe>
         <p><b>🎬 Bolalar Uchun Kulgili Vlog</b><br>🔹 Bolalar tomonidan syomka qilingan, multfilm effektlari bilan boyitilgan.</p>
       </div>
+      <div class="portfolio-item">
+        <iframe src="https://www.youtube.com/embed/J9l8go0I5e4" title="YouTube Video 6"></iframe>
+        <p><b>🎬 Uy sotmoqchi bo'lganlar diqqatiga!</b><br>🔹 Umumiy video tayyor bo'lishiga 6soat vaqt ketgan. <br> 🔹 Video qo'yilgandan so'ng uy bir kun ichida o'z egasini topgan.</p>
+      </div>
     </div>
   </section>
 
