--- a/index.html
+++ b/index.html
@@ -152,8 +152,8 @@
         <p><b>🎙 Jinsiy Zaiflik – Tibbiyot Podkasti</b><br>🔹 Minimalist vizual, professional audio va montaj bilan tayyorlangan podkast.</p>
       </div>
       <div class="portfolio-item">
-        <iframe src="https://www.youtube.com/embed/2rYjYmfIxfs" title="YouTube Video 4"></iframe>
-        <p><b>🎙 Micropenia – Tibbiyot Podkasti</b><br>🔹 Jiddiy atmosfera, sifatli audio va professional montaj.</p>
+        <iframe src="https://www.youtube.com/embed/5T9vXyLld4U?si=QpBj4a6l1yoEOrtS" title="YouTube Video 4"></iframe>
+        <p><b>🎥 KOSMOSGA VARRAK UCHIRDILDI! VLOG</b><br>🔹 Bu yo'nalishda birinchi ishlarimdan biri. Meme va dinamika bilan ishlandi</p>
       </div>
       <div class="portfolio-item">
         <iframe src="https://www.youtube.com/embed/I8W9BzgUuiE" title="YouTube Video 5"></iframe>
