--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
       <a href="#reels">Reels</a>
       <a href="#brands">Brendlar</a>
       <a href="#services">Xizmatlar</a>
-      <a href="#face">Brand Face xizmati</a>
+      <a href="#face.html">Brand Face xizmati</a>
       <a href="#contact">Bog'lanish</a>
     </nav>
   </header>
