--- a/face.html
+++ b/face.html
@@ -3,20 +3,32 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Brand Face Portfolio</title>
+  <title>Brand Face - Just Oripov</title>
+  <link rel="shortcut icon" href="./img/profile.jpg" type="image/x-icon">
   <style>
     body {
-      font-family: Arial, sans-serif;
-      background: #f9f9f9;
-      color: #333;
       margin: 0;
-      padding: 0;
+      font-family: Arial, sans-serif;
+      background: #f5f5f5;
+      color: #333;
     }
     header {
       background: #111;
-      color: white;
+      color: #fff;
       padding: 20px;
       text-align: center;
+    }
+    nav a {
+      margin: 0 15px;
+      color: #fff;
+      text-decoration: none;
+    }
+    header img {
+      width: 120px;
+      height: 120px;
+      border-radius: 50%;
+      margin-top: 10px;
+      object-fit: cover;
     }
     .section {
       padding: 40px 20px;
@@ -24,8 +36,33 @@
       margin: auto;
     }
     .section h2 {
-      text-align: center;
       margin-bottom: 20px;
+      text-align: center;
+    }
+    .about-face {
+      display: flex;
+      flex-direction: column;
+      gap: 30px;
+    }
+    @media(min-width: 768px) {
+      .about-face {
+        flex-direction: row;
+      }
+    }
+    .about-face img {
+      width: 100%;
+      max-width: 400px;
+      border-radius: 12px;
+      object-fit: cover;
+    }
+    .about-info {
+      flex: 1;
+    }
+    .about-info h3 {
+      margin-bottom: 10px;
+    }
+    .about-info ul {
+      padding-left: 20px;
     }
     .carousel {
       display: flex;
@@ -64,15 +101,33 @@
 </head>
 <body>
   <header>
-    <h1>Brand Face Portfolio</h1>
-    <p>Just Oripov — brend yuzini yaratishdagi ishlari</p>
+    <h1>Just Oripov</h1>
+    <p>Tez, sifat, kreativ bo'lishini yaxshi ko'raman!</p>
+    <img src="img/profile.jpg" alt="Just Oripov" />
+    <nav>
+      <a href="index.html">Bosh sahifa</a>
+      <a href="#about-face">Men haqimda</a>
+      <a href="#contact">Bog'lanish</a>
+    </nav>
   </header>
 
-  <section class="section">
-    <h2>Brend Face haqida</h2>
-    <p style="text-align:center; max-width:700px; margin:auto;">
-      Brend yuzini yaratish — bu nafaqat vizual ko‘rinish, balki ishonch, aloqa va xaridorga ta’sirchan tarzda taqdim etiladigan obrazdir. Quyidagi portfoliolar orqali siz Just Oripovning ushbu yo‘nalishdagi tajribasi bilan tanishishingiz mumkin.
-    </p>
+  <section class="section" id="about">
+    <h2>Brand Face haqida</h2>
+    <div class="about-face">
+      <img src="img/brandface_main.jpg" alt="Brand Face" />
+      <div class="about-info">
+        <h3>Shaxsiy ma'lumotlar:</h3>
+        <ul>
+          <li><b>Ism:</b> Just Oripov</li>
+          <li><b>Yosh:</b> 31</li>
+          <li><b>Yashash joyi:</b> Toshkent, O‘zbekiston</li>
+          <li><b>Mutaxassislik:</b> Mobilograf, brend yuzlar uchun videokontent yaratuvchisi</li>
+          <li><b>Tajriba:</b> 9 yil biznesda, 5 yil marketing va kontentda</li>
+          <li><b>Maxsus yo‘nalish:</b> Tabiiy, ishonchli va professional brend yuz imijlari bilan ishlash</li>
+        </ul>
+        <p>Brend Face xizmatida men har bir mijozga individual yondashaman. Tashqi ko‘rinish, ohang, vizual stil va hikoya orqali brendga jon beraman.</p>
+      </div>
+    </div>
   </section>
 
   <section class="section">
@@ -84,8 +139,8 @@
     </div>
   </section>
 
-  <section class="section">
-    <h2>Video portfoliolar</h2>
+  <section class="section" id="portfolio">
+    <h2>Brand Face video portfoliolar</h2>
     <div class="portfolio-grid">
       <div class="portfolio-item">
         <iframe src="https://www.youtube.com/embed/G79DJ8iReSE"></iframe>
@@ -101,5 +156,17 @@
       </div>
     </div>
   </section>
+
+  <section class="section contact" id="contact">
+    <h2>Bog'lanish</h2>
+    <a href="https://t.me/just_oripov">Telegram</a>
+    <a href="https://instagram.com/just.oripov">Instagram</a>
+    <a href="mailto:kichkina.developer@gmail.com">Email</a>
+    <a href="tel:+998993630504">Telefon</a>
+  </section>
+
+  <footer>
+    <p>&copy; 2025 Just Oripov. Barcha huquqlar himoyalangan.</p>
+  </footer>
 </body>
 </html>
